--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "moviematch",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/cris7ian/moviematch"
@@ -18,6 +18,7 @@
   "dependencies": {
     "chalk": "^2.3.0",
     "command-line-args": "^4.0.7",
+    "commander": "^2.11.0",
     "cowsay": "^1.2.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
